--- a/css/pages/popup.css
+++ b/css/pages/popup.css
@@ -11,19 +11,19 @@ body {
   font-size: 85.7%;
 }
 
-.panel {
+.open-panels li {
   display: flex;
   margin: .5rem 0;
 }
 
-.panel span {
+.open-panels li span {
   flex-grow: 1;
   overflow: hidden;
   white-space: nowrap;
   -webkit-mask-image: linear-gradient(to __MSG_@@bidi_end_edge__, white 50%, transparent 90%);
 }
 
-.panel a {
+.open-panels li a {
   flex-shrink: 0;
 }
 
