Implement keyboard shortcuts.

--- a/css/pages/popup.css
+++ b/css/pages/popup.css
@@ -7,8 +7,13 @@ body {
   padding: .7rem 1rem;
 }
 
+.placeholder,
 .open-panels {
   font-size: 85.7%;
+}
+
+.placeholder {
+  text-align: center;
 }
 
 .open-panels li {
