--- a/source/stylesheets/pages/popup.css
+++ b/source/stylesheets/pages/popup.css
@@ -43,3 +43,34 @@ body {
   height: 16px;
   margin-__MSG_@@bidi_end_edge__: .5rem;
 }
+
+.tabs {
+  display: flex;
+  align-items: center;
+  margin: 2rem -2rem -2rem;
+  overflow: hidden;
+}
+
+.tabs__tab {
+  flex-grow: 1;
+  padding: 1rem 0;
+  text-align: center;
+  background: #f4f4f4;
+  box-shadow: inset 1px 1px 0 #ddd, inset 0 1rem 1rem -1rem #ddd;
+  text-decoration: none;
+  color: #aaa !important;
+}
+
+.tabs__tab--active {
+  background: transparent;
+  box-shadow: inset 0 1px 0 #f4f4f4, inset 1px 0 0 #ddd, 0 0 1rem #ddd;
+  z-index: 1;
+}
+
+.tabs__tab:first-child {
+  box-shadow: inset 0 1px 0 #ddd, inset 0 1rem 1rem -1rem #ddd;
+}
+
+.tabs__tab--active:first-child {
+  box-shadow: inset 0 1px 0 #f4f4f4, 0 0 1rem #ddd;
+}
