Use fixed popup tab positioning.

--- a/source/stylesheets/base.scss
+++ b/source/stylesheets/base.scss
@@ -5,9 +5,9 @@
 }
 
 body {
-  min-width: 20rem;
+  min-width: 19rem;
   overflow: auto;
-  padding: 2rem;
+  margin: 2rem;
   line-height: 1.5;
   color: #444;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
